<resources>
    <string name="app_name">Mada</string>
    <string name="login">Se connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="destination">Destination</string>
    <string name="hotel">Hotel</string>
    <string name="accueil">Accueil</string>
    <string name="actuality">Actualité</string>
    <string name="settings">Préférence</string>
    <string name="contact">Nous contacter</string>
    <string name="nightMode">Mode nuit</string>
    <string name="language">Langue</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="no_account">Pas encore de compte?</string>
    <string name="signin">S\'inscrire</string>
    <string name="name">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="confirm_password">Confirmer votre mot de passe</string>
    <string name="have_account">Déjà un compte?</string>
    <string name="show_more">Voir plus</string>
    <string name="logout">Se déconnecter</string>
    <string name="notification_channel_id">Channel ID</string>
    <string name="notification_channel_title">Channel Title</string>
    <string name="notification_channel_description">Description of this channel</string>
    <string name="create">Créer</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="content">Contenu</string>
    <string name="localisation">Localisation</string>
    <string name="active_notif">Activer la notification</string>
    <string name="activate_night_mode">Activer mode nuit</string>
    <string name="valid">Valider</string>
    <string name="fr">Fr</string>
    <string name="en">En</string>
    <string name="clair">Clair</string>
    <string name="dark">Sombre</string>
    <string name="results">Resultats</string>
    <string name="view_results">Montrer les resultats</string>
    <string name="incomplete_answers_msg">Veuillez repondre a toutes les questions</string>
    <string name="results_review_hint">Vous pouvez consulter les questions précédentes pour voir les réponses correctes</string>
    <string name="select_theme">Choisir le thème</string>
    <string name="select_language">Choisir langue</string>
    <string name="add_destination">Ajouter destination</string>
    <string name="search">Rechercher</string>
    <string name="all">Tous</string>
    <string name="favorites">Favoris</string>
    <string name="prev">Préc</string>
    <string name="next">Suiv</string> 
    <string name="on">ON</string>
    <string name="off">OFF</string> 
    <string name="site_touristique">Site touristique</string>
    <string name="start_quiz">Commencer</string>
    <string name="view_more">Voir plus</string>

</resources>