<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/destinationMenu"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/destination" />
    <item
        android:id="@+id/hotelMenu"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/hotel" />
    <item
        android:id="@+id/accueilMenu"
        android:checked="true"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/accueil" />
    <item
        android:id="@+id/actualityMenu"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/actuality" />
    <item
        android:id="@+id/settingsMenu"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings" />
</menu>