<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingTop="16dp"
    android:paddingRight="12dp"
    android:paddingBottom="16dp"
    tools:context=".visitor.fragments.settings.SettingUnknownVisitorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:cornerRadius="12dp" />

        <Switch
            android:id="@+id/switchNotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active_notif" />

        <Switch
            android:id="@+id/switchNightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activate_night_mode" />

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonToEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="to En" />

    </LinearLayout>
</RelativeLayout>