<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".visitor.fragments.quiz.QuizQuestionFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/results"
        android:textAlignment="center"
        android:textSize="34sp" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_recat">

        <Button
            android:id="@+id/quizResultsViewBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="0dp"
            android:text="@string/view_results"
            android:textAlignment="gravity"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/resultsValueTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quizResultsViewBtn"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/results"
            android:textAlignment="center"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/resultsReviewHintTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/resultsValueTxtView"
            android:layout_marginBottom="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/results_review_hint"
            android:textAlignment="center"
            android:textStyle="italic" />
    </RelativeLayout>

    </LinearLayout>